Link image layer to its asset instead of including the datadump in the layer information

--- a/src/components/viewport-layer.less
+++ b/src/components/viewport-layer.less
@@ -5,6 +5,9 @@
   &:hover .sv-viewport-layer-borders {
     opacity: 0.5;
   }
+  &.sv-hidden {
+    display: none;
+  }
   &.sv-selected {
     .sv-viewport-layer-borders {
       opacity: 1;
