Hook up a basic save button

--- a/src/components/header.less
+++ b/src/components/header.less
@@ -6,5 +6,8 @@
   position: relative;
   .sv-header-content {
     text-align: right;
+    .sv-button:not(:last-child) {
+      margin-right: @padding-small;
+    }
   }
 }
