--- a/src/components/timeline.less
+++ b/src/components/timeline.less
@@ -45,13 +45,21 @@
         flex-shrink: 0;
         box-shadow: none;
         position: relative;
+        &:hover {
+          background-color: @shadow;
+          .sv-icon {
+            fill: white;
+          }
+        }
         &.pl-active .sv-icon {
+          fill: @brand-primary;
           transform: translate(-50%, -50%) rotate(90deg);
         }
 
         .sv-icon {
           width: @padding-large;
           height: @padding-large;
+          fill: @gray-lightest;
           position: absolute;
           top: 50%;
           left: 50%;
