Add scale to view bar

--- a/src/components/view-bar.less
+++ b/src/components/view-bar.less
@@ -1,14 +1,13 @@
 .sv-view-bar {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   flex-shrink: 0;
   padding: @padding-smaller @padding-small;
   border-top: 1px solid @shadow-dark;
   color: @gray-lighter;
   .sv-view-bar-zoom {
-    padding: @padding-smallest;
     font-size: @font-size-small;
-    line-height: @padding-base;
   }
   .sv-view-bar-align {
     display: flex;
