Remove unused variables

--- a/src/variables.less
+++ b/src/variables.less
@@ -1,18 +1,4 @@
-@gray-darkest: lighten(black, 5%);
-@gray-darker: lighten(black, 10%);
-@gray-dark: lighten(black, 15%);
-@gray: lighten(black, 20%);
-@gray-light: lighten(black, 30%);
-@gray-lighter: lighten(black, 45%);
-@gray-lightest: lighten(black, 70%);
-
-@shadow-light: fade(black, 10%);
-@shadow: fade(black, 20%);
-@shadow-dark: fade(black, 50%);
-
-@highlight-light: fade(white, 5%);
-@highlight: fade(white, 10%);
-@highlight-dark: fade(white, 25%);
+@brand-primary: lightgreen;
 
 @dummy-layer-color: purple;
 @text-layer-color: blue;
