--- a/src/components/button.less
+++ b/src/components/button.less
@@ -1,10 +1,30 @@
 .sv-button {
-  box-shadow: inset 0 0 0 1px white;
-  color: white;
-  &:hover, &:focus {
-    background-color: @shadow;
+  padding: @padding-smaller @padding-small;
+  border: none;
+  border-radius: @border-radius-small;
+  font-size: @font-size-small;
+  line-height: 1em;
+  background: none;
+  overflow: hidden;
+  position: relative;
+  &:before {
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
-  &:active {
+  &:hover, &:focus {
+    &:before {
+      background-color: @shadow;
+    }
+  }
+  &:active:before {
     background-color: @shadow-dark;
+  }
+
+  span {
+    position: relative;
   }
 }
