Add save button shortcut

--- a/src/components/button.less
+++ b/src/components/button.less
@@ -24,7 +24,11 @@
     background-color: @shadow-dark;
   }
 
-  span {
+  * {
     position: relative;
+  }
+  > span {
+    display: block;
+    line-height: 1em;
   }
 }
