--- a/src/components/library.less
+++ b/src/components/library.less
@@ -3,6 +3,7 @@
 .sv-library {
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
   width: @library-width;
   border-right: 1px solid @shadow-dark;
   overflow: hidden;
