Add aspect ratio to view bar

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -30,6 +30,7 @@
         box-sizing: content-box;
         padding: @padding-largest;
         overflow: hidden;
+        position: relative;
       }
     }
   }
