Hook up project updating

--- a/src/components/header.less
+++ b/src/components/header.less
@@ -17,9 +17,9 @@
     flex-grow: 1;
     max-width: 40rem;
     margin: 0 @padding-largest;
+    padding: 0 @padding-base;
     border-radius: @border-radius-small;
     line-height: @header-logo-height;
-    text-align: center;
     background-color: @gray-darker;
   }
   .sv-header-content {
