More carefully choose layer colors

--- a/src/variables.less
+++ b/src/variables.less
@@ -1,5 +1,5 @@
 @brand-primary: deepskyblue;
 
-@dummy-layer-color: purple;
-@text-layer-color: blue;
-@image-layer-color: red;
+@dummy-layer-color: spin(@brand-primary, -30%);
+@text-layer-color: spin(@brand-primary, 30%);
+@image-layer-color: spin(@brand-primary, 90%);
