Limit the amount of updates a bit

--- a/src/components/button.less
+++ b/src/components/button.less
@@ -4,6 +4,7 @@
   border-radius: @border-radius-small;
   font-size: @font-size-small;
   line-height: 1em;
+  color: @gray-lightest;
   background: none;
   overflow: hidden;
   position: relative;
