--- a/src/components/header.less
+++ b/src/components/header.less
@@ -14,13 +14,22 @@
     height: @header-logo-height;
   }
   .sv-header-name {
+    display: flex;
     flex-grow: 1;
     max-width: 30rem;
     margin: 0 @padding-largest;
-    padding: 0 @padding-base;
     border-radius: @border-radius-small;
     line-height: @header-logo-height;
     background-color: @gray-darker;
+    overflow: hidden;
+    .sv-button {
+      border-radius: 0;
+      color: @brand-primary;
+    }
+    .sv-text-field {
+      flex-grow: 1;
+      padding: 0 @padding-base;
+    }
   }
   .sv-header-content {
     display: flex;
