Start separating out a viewer

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -31,6 +31,16 @@
         padding: @padding-largest;
         overflow: hidden;
         position: relative;
+        .sv-viewport {
+          box-shadow: @box-shadow-large;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          &.sv-dragging {
+            box-shadow: 0 0 0 3px @brand-primary, @box-shadow-large;
+          }
+        }
       }
     }
   }
