--- a/src/components/header.less
+++ b/src/components/header.less
@@ -1,10 +1,11 @@
 @header-logo-height: @padding-larger;
+@header-name-height: @padding-largest;
 
 .sv-header {
   display: flex;
   flex-shrink: 0;
   align-items: center;
-  padding: @padding-small @padding-base;
+  padding: @padding-smaller @padding-base;
   border-bottom: 1px solid @brand-primary;
   box-shadow: 0 1px @shadow-dark;
   background-color: @gray-dark;
@@ -19,7 +20,8 @@
     max-width: 30rem;
     margin: 0 @padding-largest;
     border-radius: @border-radius-small;
-    line-height: @header-logo-height;
+    box-shadow: inset 0 0 0 1px @shadow;
+    line-height: @header-name-height;
     background-color: @gray-darker;
     overflow: hidden;
     .sv-button {
