Make the viewer work

--- a/src/viewer.less
+++ b/src/viewer.less
@@ -6,3 +6,16 @@
 body {
   overflow: hidden;
 }
+
+.sv-viewer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  user-select: none;
+  pointer-events: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
