--- a/src/components/library.less
+++ b/src/components/library.less
@@ -138,4 +138,9 @@
       }
     }
   }
+  .sv-library-footer {
+    flex-shrink: 0;
+    padding: @padding-smaller;
+    border-top: 1px solid @shadow-dark;
+  }
 }
