--- a/src/components/view-bar.less
+++ b/src/components/view-bar.less
@@ -36,18 +36,8 @@
         border-right: 1px solid @shadow;
       }
 
-      .sv-view-bar-align-option {
-        padding: @padding-smallest;
-        border-radius: @border-radius-small;
-        &:not(:last-child) {
-          margin-right: @padding-smallest;
-        }
-
-        .sv-icon {
-          width: @padding-base;
-          height: @padding-base;
-          fill: @gray-light;
-        }
+      .sv-button:not(:last-child) {
+        margin-right: @padding-smallest;
       }
     }
   }
