Wire up upload button a bit

--- a/src/components/button.less
+++ b/src/components/button.less
@@ -8,32 +8,19 @@
   background: none;
   overflow: hidden;
   position: relative;
-  &:before {
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
   &:hover, &:focus, &:active {
     color: white;
-    &:before {
-      background-color: @shadow;
-    }
-
     .sv-icon {
       fill: white;
     }
   }
-  &:active:before {
+  &:hover, &:focus {
+    background-color: @shadow;
+  }
+  &:active {
     background-color: @shadow-dark;
   }
 
-  > span {
-    display: block;
-    position: relative;
-  }
   .sv-icon {
     fill: @gray-lightest;
   }
