--- a/src/components/library.less
+++ b/src/components/library.less
@@ -142,5 +142,19 @@
     flex-shrink: 0;
     padding: @padding-smaller;
     border-top: 1px solid @shadow-dark;
+    .sv-button input[type="file"] {
+      width: 100%;
+      height: 100%;
+      font-size: 0;
+      opacity: 0;
+      outline: none;
+      cursor: pointer;
+      position: absolute;
+      top: 0;
+      left: 0;
+      &::-webkit-file-upload-button {
+        display: none;
+      }
+    }
   }
 }
