--- a/src/components/app.less
+++ b/src/components/app.less
@@ -1,6 +1,6 @@
 @import './header';
 @import './library';
-@import './publish-dialog';
+@import './share-dialog';
 @import './timeline';
 @import './view-bar';
 @import './viewport';
