--- a/src/components/share-dialog.less
+++ b/src/components/share-dialog.less
@@ -1,4 +1,4 @@
-.sv-publish-dialog {
+.sv-share-dialog {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -7,7 +7,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  .sv-publish-dialog-overlay {
+  .sv-share-dialog-overlay {
     width: 100%;
     height: 100%;
     background-color: @shadow-dark;
@@ -15,7 +15,7 @@
     top: 0;
     left: 0;
   }
-  .sv-publish-dialog-window {
+  .sv-share-dialog-window {
     width: 40rem;
     padding: @padding-largest;
     border-radius: @border-radius-large;
