--- a/src/components/header.less
+++ b/src/components/header.less
@@ -27,9 +27,9 @@
     flex-grow: 1;
     max-width: 36rem;
     margin-left: auto;
-    border: 1px solid @shadow;
+    box-shadow: 0 0 0 1px @shadow-dark;
     border-radius: @border-radius-small;
-    background-color: @gray-darker;
+    background-color: @gray;
     overflow: hidden;
     input[type="text"] {
       flex-grow: 1;
@@ -37,7 +37,7 @@
       padding: 0 @padding-base;
       margin-right: @padding-smaller;
       border: none;
-      border-right: 1px solid @shadow;
+      box-shadow: 1px 0 @shadow;
       color: @gray-lightest;
       background: none;
       cursor: text;
@@ -45,9 +45,8 @@
         color: mix(@gray-lightest, white);
       }
       &:focus {
-        border-color: @brand-primary;
         color: white;
-        background-color: @gray;
+        background-color: @highlight-light;
         outline: none;
       }
     }
