Use a general dialog component

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -1,6 +1,6 @@
+@import './dialog';
 @import './header';
 @import './library';
-@import './share-dialog';
 @import './timeline';
 @import './view-bar';
 @import './viewport';
