--- a/src/components/button.less
+++ b/src/components/button.less
@@ -8,7 +8,7 @@
   background: none;
   overflow: hidden;
   position: relative;
-  &:not[disabled="true"] {
+  &:not([disabled]) {
     &:hover, &:focus, &:active {
       color: white;
       .sv-icon {
