Add a border to the dialog

--- a/src/components/dialog.less
+++ b/src/components/dialog.less
@@ -16,6 +16,8 @@
     width: 40rem;
     margin: 0 auto;
     padding: @padding-largest;
+    border: 1px solid @shadow-dark;
+    border-top: none;
     box-shadow: @box-shadow-large;
     background-color: @gray-dark;
     position: relative;
