Implement a way better build system

--- a/src/main.less
+++ b/src/main.less
@@ -1,6 +1,4 @@
-@import '../node_modules/planet-css/lib/main';
-@import './variables';
-
+@import './base';
 @import './components/button';
 @import './components/control';
 @import './components/icon';
@@ -10,7 +8,6 @@
 body {
   color: @gray-lightest;
   background-color: @gray-darker;
-  overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
