--- a/src/viewer/main.less
+++ b/src/viewer/main.less
@@ -1,11 +1,5 @@
-@import '../node_modules/planet-css/lib/main';
-@import './variables';
-
-@import './components/viewport';
-
-body {
-  overflow: hidden;
-}
+@import '../base';
+@import '../components/viewport';
 
 .sv-viewer {
   display: flex;
