Move open dialog to its own component

--- a/src/components/app.less
+++ b/src/components/app.less
@@ -1,6 +1,7 @@
 @import './dialog';
 @import './header';
 @import './library';
+@import './open-dialog';
 @import './timeline';
 @import './view-bar';
 @import './viewport';
@@ -41,26 +42,5 @@
       }
     }
   }
-  .sv-app-projects {
-    display: flex;
-    flex-wrap: wrap;
-    margin-top: @padding-base;
-    .sv-app-project {
-      width: 50%;
-      padding: @padding-small;
-      background-color: @gray;
-      cursor: pointer;
-      &:hover {
-        background-color: @gray-light;
-      }
 
-      span {
-        display: block;
-        &:last-child {
-          font-size: @font-size-small;
-          color: @gray-lighter;
-        }
-      }
-    }
-  }
 }
