--- a/src/components/dialog.less
+++ b/src/components/dialog.less
@@ -21,6 +21,9 @@
     box-shadow: @box-shadow-large;
     background-color: @gray-dark;
     position: relative;
+    h3 {
+      margin-bottom: @padding-base;
+    }
     > p:first-child {
       margin-top: 0;
     }
