Give dialogs a slight border radius

--- a/src/components/dialog.less
+++ b/src/components/dialog.less
@@ -18,6 +18,8 @@
     padding: @padding-largest;
     border: 1px solid @shadow-dark;
     border-top: none;
+    border-bottom-left-radius: @border-radius-small;
+    border-bottom-right-radius: @border-radius-small;
     box-shadow: @box-shadow-large;
     background-color: @gray-dark;
     position: relative;
