Add dimensions to new dialog

--- a/src/main.less
+++ b/src/main.less
@@ -1,5 +1,6 @@
 @import './base';
 @import './components/button';
+@import './components/checkbox';
 @import './components/control';
 @import './components/icon';
 @import './components/text-field';
